[tool.poetry]
name = "hw1"
version = "0.1.0"
description = ""
authors = ["Markus Schepke <markus.schepke@wolt.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.*"
mujoco = "2.2.0"
gym = "0.25.2"
tensorboard = "2.10.0"
tensorboardx = "2.5.1"
matplotlib = "3.5.3"
ipython = "7.34.0"
moviepy = "1.0.3"
pyvirtualdisplay = "3.0"
torch = "1.12.1"
opencv-python = "4.6.0.66"
ipdb = "0.13.9"
swig = "4.0.2"
box2d-py = "2.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
